--- a/static/dark.css
+++ b/static/dark.css
@@ -194,7 +194,7 @@ ul li.checked {
   background: #6c757d;
   color: #fff;
   text-decoration: line-through;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #6c757d;
 }
 
 /* Add a "checked" mark when clicked on */
@@ -214,6 +214,8 @@ ul li.checked::before {
 /* Style the close button */
 .close {
   position: absolute;
+  background: none;
+  border: none;
   transition: 0.2s;
   scale: 1;
   right: 0;
@@ -228,6 +230,8 @@ ul li.checked::before {
 /* Style the edit button */
 .edit {
   position: absolute;
+  background: none;
+  border: none;
   transition: 0.2s;
   scale: 1;
   right: 2rem;
@@ -239,6 +243,21 @@ ul li.checked::before {
   scale: .7;
 }
 
+/* Style the priority button */
+.priority {
+  position: absolute;
+  background: none;
+  border: none;
+  transition: 0.2s;
+  scale: 1;
+  right: 4rem;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.priority:hover {
+  scale: .7;
+}
 
 /* Style the header */
 .header {
@@ -262,7 +281,7 @@ ul li.checked::before {
   border: 2px solid #38b6ff;
   background: none;
   color: white;
-  width: 85%;
+  width: 80%;
   padding: 9.5px;
   float: left;
   font-size: 18px;
@@ -276,6 +295,7 @@ ul li.checked::before {
 
 .title{
   border: none;
+  color: white;
   background: none;
   outline: 0;
   text-align: center;
@@ -293,19 +313,36 @@ ul li.checked::before {
 /* Style the "Add" button */
 .addBtn {
   padding: 9.5px;
-  width: 15%;
+  color: white;
+  width: 10%;
   background-color: #38b6ff;
   border: 2px solid #38b6ff;
   float: left;
   text-align: center;
   font-size: 18px;
   cursor: pointer;
-  transition: 0.3s;
-  border-bottom-right-radius: 7px;
-  border-top-right-radius: 7px;
 }
 
 .addBtn:hover {
+  opacity: 0.7;
+}
+
+/* Style the "Options" button */
+.optionsBtn {
+  padding: 9.5px;
+  color: white;
+  width: 10%;
+  background-color: #38b6ff;
+  border: 2px solid #38b6ff;
+  border-bottom-right-radius: 7px;
+  border-top-right-radius: 7px;
+  float: right;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.optionsBtn:hover {
   opacity: 0.7;
 }
 
@@ -329,3 +366,31 @@ ul li.checked::before {
 .toggleButton:hover{
   opacity: .5;
 }
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 2.7rem;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .optionsBtn {border-bottom-right-radius: 0px;}
