--- a/static/dark.css
+++ b/static/dark.css
@@ -321,6 +321,7 @@ ul li.checked::before {
   text-align: center;
   font-size: 18px;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .addBtn:hover {
@@ -340,6 +341,7 @@ ul li.checked::before {
   text-align: center;
   font-size: 18px;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .optionsBtn:hover {
