--- a/static/light.css
+++ b/static/light.css
@@ -279,7 +279,7 @@ ul li.checked::before {
 /* Style the input */
 .listInput {
   border: 2px solid #38b6ff;
-  width: 85%;
+  width: 80%;
   padding: 9.5px;
   float: left;
   font-size: 18px;
@@ -304,7 +304,7 @@ ul li.checked::before {
 /* Style the "Add" button */
 .addBtn {
   padding: 9.5px;
-  width: 15%;
+  width: 10%;
   background-color: #38b6ff;
   border: 2px solid #38b6ff;
   float: left;
@@ -312,11 +312,29 @@ ul li.checked::before {
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s;
-  border-bottom-right-radius: 7px;
-  border-top-right-radius: 7px;
 }
 
 .addBtn:hover {
+  opacity: 0.7;
+}
+
+/* Style the "Options" button */
+.optionsBtn {
+  padding: 9.5px;
+  color: white;
+  width: 10%;
+  background-color: #38b6ff;
+  border: 2px solid #38b6ff;
+  border-bottom-right-radius: 7px;
+  border-top-right-radius: 7px;
+  float: right;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.optionsBtn:hover {
   opacity: 0.7;
 }
 
@@ -340,3 +358,31 @@ ul li.checked::before {
 .toggleButton:hover{
   opacity: .5;
 }
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 2.7rem;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .optionsBtn {border-bottom-right-radius: 0px;}
