--- a/static/light.css
+++ b/static/light.css
@@ -79,36 +79,43 @@ html{
   }
 
 h1{
-    color: white;
+    color: black;
     font-size: 45px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Varela Round';
 }
 
 h2{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Varela Round';
   font-weight: lighter;
 }
+
+p{
+  color: black;
+  font-family: 'Varela Round';
+  padding: 0px 100px;
+  font-size: 18px;
+}
+
 
 .container{
     width: 100%;
     text-align: center;
 }
 
-.home-background{
-    background-image: url(assets/img/background.png);
-    background-repeat: no-repeat; 
-    background-size: cover;
-    background-position: right;
-    animation: 0.9s ease-out 0s 1 fade;
-}
-
-.home-background h1{
+.home-title{
   color: black;
   font-size: 80px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Varela Round';
   position: relative;
-  top: 23vh;
-  right: 9rem auto;
+  top: 10rem;
+}
+
+.beta-text{
+  color: #38b6ff;
+  font-size: 30px;
+  font-family: 'Varela Round';
+  position: relative;
+  top: 7rem;
 }
 
 @keyframes fade {
@@ -120,21 +127,22 @@ h2{
   }
 }
 
-.home-button{
-    background: #38b6ff;
-    border-radius: 7px;
-    text-decoration: none;
-    color: white;
-    padding: 16px 32px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    transition-duration: 0.3s;
-    position: relative;
-    top: 18vh;
-    right: 18.2rem auto;
+.button{
+  position: relative;
+  top: 2rem;
+  cursor: pointer;
+  color: black;
+  border: none;
+  border-radius: 7px;
+  text-decoration: none;
+  padding: 16px 34px;
+  font-family: 'Varela Round';
+  font-size: 20px;
+  transition-duration: 0.3s;
 }
 
-.home-button:hover{
-    opacity: 0.3;
+.button:hover{
+    opacity: 0.2;
 }
 
 .list-bg{
@@ -172,10 +180,10 @@ ul li {
   list-style-type: none;
   background: white;
   font-size: 18px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Varela Round';
   transition: 0.2s;
   color: black;
-  border-bottom: 2px solid #6c757d;
+  border-bottom: 2px solid #34393d;
 
   
   /* make the list items unselectable */
@@ -194,7 +202,6 @@ ul li.checked {
   background: #6c757d;
   color: #fff;
   text-decoration: line-through;
-  border-bottom: 2px solid #ffffff;
 }
 
 /* Add a "checked" mark when clicked on */
@@ -250,8 +257,7 @@ ul li.checked::before {
   border: none;
   transition: 0.2s;
   scale: 1;
-  right: 4rem;
-  top: 0;
+  right: 5rem;
   padding: 12px 16px 12px 16px;
 }
 
@@ -262,11 +268,12 @@ ul li.checked::before {
 /* Style the header */
 .header {
   background-color: none;
-  padding: 30px 40px;
+  padding-right: 40px;
+  padding-left: 40px;
+  position: relative;
+  top: -1rem;
   color: white;
   text-align: center;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
 }
 
 /* Clear floats after the header */
@@ -279,7 +286,7 @@ ul li.checked::before {
 /* Style the input */
 .listInput {
   border: 2px solid #38b6ff;
-  width: 80%;
+  width: 78%;
   padding: 9.5px;
   float: left;
   font-size: 18px;
@@ -291,20 +298,21 @@ ul li.checked::before {
   border: none;
   outline: 0;
   text-align: center;
-  padding: 1rem;
+  padding: 3rem;
   font-size: 45px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Varela Round';
 }
 
 .title::placeholder{
   font-size: 45px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Varela Round';
 }
 
 /* Style the "Add" button */
 .addBtn {
   padding: 9.5px;
-  width: 10%;
+  color: white;
+  width: 11%;
   background-color: #38b6ff;
   border: 2px solid #38b6ff;
   float: left;
@@ -322,14 +330,14 @@ ul li.checked::before {
 .optionsBtn {
   padding: 9.5px;
   color: white;
-  width: 10%;
+  width: 11%;
   background-color: #38b6ff;
   border: 2px solid #38b6ff;
   border-bottom-right-radius: 7px;
   border-top-right-radius: 7px;
   float: right;
   text-align: center;
-  font-size: 18px;
+  font-size: 17px;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -338,16 +346,42 @@ ul li.checked::before {
   opacity: 0.7;
 }
 
+.optionsBtn option{
+  background-color: rgb(48, 54, 82);
+}
+
+
+.priorityText{
+  font-family: 'M PLUS Rounded 1c';
+  color: white;
+  background-color: #21b972;
+  border-radius: 50px;
+  width: 4.5rem;
+  padding: 5px 10px 5px 10px;
+  margin: -.25rem;
+  font-size: 12px;
+  font-weight: bolder;
+}
+
+.editInput{
+  border: 2px solid #38b6ff;
+  width: 80%;
+  border-radius: 7px;
+  background: none;
+  font-size: 18px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+}
+
 .list{
   float: left;
   width: 100%;
 }
 
 .toggleButton{
-  position: fixed;
-  padding: 10px;
-  bottom: 0;
-  right: 0;
+  position: relative;
+  padding: 16px 34px;
+  top: 2.2rem;
   background: none;
   border: none;
   transition: 0.3s;
@@ -386,3 +420,93 @@ ul li.checked::before {
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .optionsBtn {border-bottom-right-radius: 0px;}
+
+.bottom-wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.bottom-wave svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 112px;
+  transform: rotateY(180deg);
+}
+
+.bottom-wave .shape-fill {
+  fill: #4A90E2;
+}
+
+.selectedButton{
+  text-decoration: underline;
+  text-decoration-color: #38b6ff;
+}
+
+.contact{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.send-button{
+  align-self: center;
+  border-radius: 7px;
+  border: none;
+  background-color: #38b6ff;
+  color: white;
+  font-size: 20px;
+  padding: 12px;
+  margin: 4px 3px;
+  width: 6.5%;
+  font-family: 'Varela Round';
+  transition: 0.3s;
+  margin: 3px 4px;
+}
+
+.send-button:hover{
+  opacity: .5;
+}
+
+.message-input{
+  border: 2px solid #34393d;
+  background: none;
+  align-self: center;
+  border-radius: 4px;
+  width: 50rem;
+  resize: none;
+  font-size: 20px;
+  font-family: 'Varela Round';
+  margin: 3px 4px;
+}
+
+.email-input{
+  border: 2px solid #34393d;
+  background: none;
+  border-radius: 4px;
+  width: 25rem;
+  height: 2rem;
+  resize: none;
+  font-size: 15px;
+  font-family: 'Varela Round';
+  align-self: center;
+  margin: 3px 4px;
+}
+
+.name-input{
+  border: 2px solid #34393d;
+  background: none;
+  border-radius: 4px;
+  width: 25rem;
+  height: 2rem;
+  resize: none;
+  font-size: 15px;
+  font-family: 'Varela Round';
+  align-self: center;
+  margin: 3px 4px;
+}
