--- a/static/light.css
+++ b/static/light.css
@@ -142,7 +142,7 @@ p{
 }
 
 .button:hover{
-    opacity: 0.2;
+    color: #38b6ff;
 }
 
 .list-bg{
@@ -221,6 +221,7 @@ ul li.checked::before {
 /* Style the close button */
 .close {
   position: absolute;
+  cursor: pointer;
   background: none;
   border: none;
   transition: 0.2s;
@@ -237,6 +238,7 @@ ul li.checked::before {
 /* Style the edit button */
 .edit {
   position: absolute;
+  cursor: pointer;
   background: none;
   border: none;
   transition: 0.2s;
@@ -253,6 +255,7 @@ ul li.checked::before {
 /* Style the priority button */
 .priority {
   position: absolute;
+  cursor: pointer;
   background: none;
   border: none;
   transition: 0.2s;
@@ -314,7 +317,11 @@ ul li.checked::before {
   color: white;
   width: 11%;
   background-color: #38b6ff;
-  border: 2px solid #38b6ff;
+  border-right: 1px solid white;
+  background-color: #38b6ff;
+  border-bottom: 2px solid #38b6ff;
+  border-top: 2px solid #38b6ff;
+  border-left: 2px solid #38b6ff;
   float: left;
   text-align: center;
   font-size: 18px;
@@ -331,8 +338,11 @@ ul li.checked::before {
   padding: 9.5px;
   color: white;
   width: 11%;
+  border-left: 1px solid white;
   background-color: #38b6ff;
-  border: 2px solid #38b6ff;
+  border-bottom: 2px solid #38b6ff;
+  border-top: 2px solid #38b6ff;
+  border-right: 2px solid #38b6ff;
   border-bottom-right-radius: 7px;
   border-top-right-radius: 7px;
   float: right;
@@ -467,6 +477,7 @@ ul li.checked::before {
   font-family: 'Varela Round';
   transition: 0.3s;
   margin: 3px 4px;
+  cursor: pointer;
 }
 
 .send-button:hover{
@@ -509,4 +520,10 @@ ul li.checked::before {
   font-family: 'Varela Round';
   align-self: center;
   margin: 3px 4px;
+}
+
+.aboutText{
+  margin: 0 auto;
+  text-align: center;
+  width: 55%;
 }
