--- a/static/dark.css
+++ b/static/dark.css
@@ -473,18 +473,19 @@ ul li.checked::before {
   align-self: center;
   color: white;
   background: none;
-  border: 2px solid white;
+  border: 2px solid #495057;
   border-radius: 4px;
   width: 50rem;
   resize: none;
   font-size: 20px;
   font-family: 'Varela Round';
   margin: 3px 4px;
-  padding: 15px 12px
+  padding: 15px 12px;
+  transition: 0.2s;
 }
 
 .email-input{
-  border: 2px solid white;
+  border: 2px solid #495057;
   color: white;
   background: none;
   border-radius: 4px;
@@ -495,12 +496,13 @@ ul li.checked::before {
   font-family: 'Varela Round';
   align-self: center;
   margin: 3px 4px;
-  padding: 15px 12px
+  padding: 15px 12px;
+  transition: 0.2s;
 }
 
 .name-input{
   color: white;
-  border: 2px solid white;
+  border: 2px solid #495057;
   background: none;
   border-radius: 4px;
   width: 50rem;
@@ -510,9 +512,21 @@ ul li.checked::before {
   font-family: 'Varela Round';
   align-self: center;
   margin: 3px 4px;
-  padding: 15px 12px
+  padding: 15px 12px;
+  transition: 0.2s;
 }
 
+.name-input:hover{
+  border: 2px solid #3060c7a2;
+}
+
+.email-input:hover{
+  border: 2px solid #3060c7a2;
+}
+
+.message-input:hover{
+  border: 2px solid #3060c7a2;
+}
 
 .name-input::placeholder, .email-input::placeholder, .message-input::placeholder{
   color: rgb(202, 202, 202);
