--- a/static/dark.css
+++ b/static/dark.css
@@ -227,7 +227,7 @@ ul li.checked::before {
   scale: 1;
   right: 0;
   top: 0;
-  padding: 12px 16px 12px 16px;
+  padding: 16px 16px 16px 16px;
 }
 
 .close:hover {
@@ -244,7 +244,7 @@ ul li.checked::before {
   scale: 1;
   right: 2rem;
   top: 0;
-  padding: 12px 16px 12px 16px;
+  padding: 16px 16px 16px 16px;
 }
 
 .edit:hover {
@@ -260,7 +260,6 @@ ul li.checked::before {
   transition: 0.2s;
   scale: 0.7;
   right: 5rem;
-  padding: 12px 16px 12px 16px;
 }
 
 .priority:hover {
@@ -287,7 +286,7 @@ ul li.checked::before {
 
 /* Style the input */
 .listInput {
-  border: 2px solid #38b6ff;
+  border: 2px solid #495057;
   background: none;
   margin-bottom: 1rem;
   color: white;
@@ -297,6 +296,16 @@ ul li.checked::before {
   font-size: 18px;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
+  transition: 0.3s;
+}
+
+.listInput:hover{
+  border: 2px solid #00688B;
+}
+
+.listInput:focus{
+  outline: none !important;
+  border: 2px solid #38b6ff;
 }
 
 .listInput::placeholder{
@@ -391,7 +400,7 @@ ul li.checked::before {
   padding: 5px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .editInput:hover{
@@ -492,7 +501,7 @@ ul li.checked::before {
   font-family: 'Varela Round';
   margin: 3px 4px;
   padding: 15px 12px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .email-input{
@@ -508,7 +517,7 @@ ul li.checked::before {
   align-self: center;
   margin: 3px 4px;
   padding: 15px 12px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .name-input{
@@ -524,7 +533,7 @@ ul li.checked::before {
   align-self: center;
   margin: 3px 4px;
   padding: 15px 12px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .name-input:hover{
