--- a/static/light.css
+++ b/static/light.css
@@ -175,8 +175,7 @@ ul li {
   position: relative;
   display: flex;
   flex-wrap: nowrap;
-  margin-top: 10px;
-  padding: 12px 8px 12px 40px;
+  padding: 16.5px 8px 16.5px 40px;
   list-style-type: none;
   background: white;
   font-size: 18px;
@@ -228,7 +227,7 @@ ul li.checked::before {
   scale: 1;
   right: 0;
   top: 0;
-  padding: 12px 16px 12px 16px;
+  padding: 16px 16px 16px 16px;
 }
 
 .close:hover {
@@ -245,7 +244,7 @@ ul li.checked::before {
   scale: 1;
   right: 2rem;
   top: 0;
-  padding: 12px 16px 12px 16px;
+  padding: 16px 16px 16px 16px;
 }
 
 .edit:hover {
@@ -259,13 +258,12 @@ ul li.checked::before {
   background: none;
   border: none;
   transition: 0.2s;
-  scale: 1;
+  scale: 0.7;
   right: 5rem;
-  padding: 12px 16px 12px 16px;
 }
 
 .priority:hover {
-  scale: .7;
+  scale: 1.1;
 }
 
 /* Style the header */
@@ -288,13 +286,24 @@ ul li.checked::before {
 
 /* Style the input */
 .listInput {
-  border: 2px solid #38b6ff;
+  border: 2px solid #ced4da;
+  margin-bottom: 1rem;
   width: 78%;
   padding: 9.5px;
   float: left;
   font-size: 18px;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
+  transition: 0.3s;
+}
+
+.listInput:hover{
+  border: 2px solid #00688B;
+}
+
+.listInput:focus{
+  outline: none !important;
+  border: 2px solid #38b6ff;
 }
 
 .title{
@@ -496,7 +505,7 @@ ul li.checked::before {
   font-family: 'Varela Round';
   margin: 3px 4px;
   padding: 15px 12px;
-  transition: 0.2s;
+  transition: 3s;
 }
 
 .email-input{
@@ -512,7 +521,7 @@ ul li.checked::before {
   align-self: center;
   margin: 3px 4px;
   padding: 15px 12px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .name-input{
@@ -528,7 +537,7 @@ ul li.checked::before {
   align-self: center;
   margin: 3px 4px;
   padding: 15px 12px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .name-input:hover{
