--- a/static/light.css
+++ b/static/light.css
@@ -107,7 +107,7 @@ p{
   font-size: 80px;
   font-family: 'Varela Round';
   position: relative;
-  top: 10rem;
+  top: 22rem;
 }
 
 .beta-text{
@@ -571,4 +571,180 @@ ul li.checked::before {
   margin: 0 auto;
   text-align: center;
   width: 55%;
+}
+
+.listItems{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toolButton{
+  width: 5rem;
+  height: 5rem;
+  border: none;
+  border-radius: 7px;
+  background-color: #38b6ff;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 1rem;
+}
+
+.toolButton:hover{
+  scale: 0.8;
+}
+
+.listButtons{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.buttonItem{
+  position: relative;
+  top: 4rem;
+  width: 23rem;
+  height: 7.2rem;
+  border: none;
+  border-radius: 7px;
+  background-color: #38b6ff;
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+  cursor: pointer;
+  transition: 0.3s;
+  font-family: 'Varela Round';
+  font-size: 25px;
+  word-wrap: break-word;
+  margin: 1rem;
+}
+
+.buttonItem:hover{
+  scale: 1.12;
+}
+
+.buttonSelect{
+  position: relative;
+  top: 4rem;
+  width: 23rem;
+  height: 7.2rem;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: 0.4s;
+  font-family: 'Varela Round';
+  font-size: 25px;
+  word-wrap: break-word;
+  margin: 1rem;
+}
+
+.buttonSelect:hover{
+  scale: 1.12;
+  text-decoration: line-through;
+  border: 5px solid #ff6a6a;
+}
+
+.continueButton{
+  align-self: center;
+  position: relative;
+  top: 1.5rem;
+  width: 8rem;
+  height: 4rem;
+  border: none;
+  border-radius: 7px;
+  background-color: #38b6ff;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0.5rem;
+}
+
+.continueButton:hover{
+  scale: 0.8;
+}
+
+.newTitlePage{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex: 1;
+  flex-direction: column;
+  margin: auto;
+  background-color: #92c8fab0;
+  min-width: none;
+  height: 35rem;
+  border-radius: 7px;
+}
+
+.closeButton{
+  position: relative;
+  width: 5rem;
+  height: 5rem;
+  border: none;
+  border-radius: 7px;
+  background: none;
+  color: #ffffff;
+  font-size: 40px;
+  cursor: pointer;
+  transition: 0.3s;
+  align-self: flex-end;
+  top: -11.5rem;
+}
+
+.closeButton:hover{
+  scale: 1.2;
+  color: #ff6a6a;
+}
+
+.colorPicker{
+  position: relative;
+  top: 6rem;
+  width: 16rem;
+  height: 6rem;
+  border-radius: 7px;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+  background-color: white;
+}
+
+.colorPicker:hover{
+  scale: 1.1;
+}
+
+.newTitle{
+  position: relative;
+  top: 0rem;
+  color: black;
+  border: 2px solid #ced4da;
+  background: white;
+  border-radius: 4px;
+  min-width: 50rem;
+  height: 3rem;
+  resize: none;
+  font-size: 20px;
+  font-family: 'Varela Round';
+  margin: 3px 4px;
+  padding: 15px 12px;
+  transition: 0.3s;
+}
+
+.newTitle:hover{
+  border: 2px solid #00688B;
+}
+
+.newTitle:focus{
+  outline: none !important;
+  border: 2px solid #38b6ff;
+}
+
+.toolBar{
+  background-color: #0d6efd;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 14px;
+  float: left;
 }
