--- a/static/dark.css
+++ b/static/dark.css
@@ -81,17 +81,17 @@ html{
 h1{
     color: white;
     font-size: 45px;
-    font-family: 'Varela Round';
+    font-family: 'Poppins';
 }
 
 h2{
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   font-weight: lighter;
 }
 
 p{
   color: white;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   font-size: 18px;
 }
 
@@ -103,7 +103,7 @@ p{
 .home-title{
   color: white;
   font-size: 80px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   position: relative;
   top: 22rem;
 }
@@ -111,7 +111,7 @@ p{
 .beta-text{
   color: #38b6ff;
   font-size: 30px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   position: relative;
   top: 7rem;
 }
@@ -135,7 +135,7 @@ p{
   border-radius: 7px;
   text-decoration: none;
   padding: 16px 34px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   font-size: 20px;
   transition-duration: 0.3s;
 }
@@ -178,7 +178,7 @@ ul li {
   list-style-type: none;
   background: #34393d;
   font-size: 18px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   transition: 0.2s;
   color: white;
   border-bottom: 2px solid white;
@@ -290,7 +290,7 @@ ul li.checked::before {
   background: none;
   margin-bottom: 1rem;
   color: white;
-  width: 78%;
+  width: 90%;
   padding: 9.5px;
   float: left;
   font-size: 18px;
@@ -320,22 +320,21 @@ ul li.checked::before {
   text-align: center;
   padding: 3rem;
   font-size: 45px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
 }
 
 .title::placeholder{
   font-size: 45px;
   color: rgb(202, 202, 202);
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
 }
 
 /* Style the "Add" button */
 .addBtn {
   padding: 9.5px;
   color: white;
-  width: 11%;
+  width: 10%;
   background-color: #38b6ff;
-  border-right: 1px solid white;
   background-color: #38b6ff;
   border-bottom: 2px solid #38b6ff;
   border-top: 2px solid #38b6ff;
@@ -343,6 +342,8 @@ ul li.checked::before {
   float: left;
   text-align: center;
   font-size: 18px;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -418,9 +419,10 @@ ul li.checked::before {
 }
 
 .toggleButton{
-  position: relative;
+  position: absolute;
+  right: 10%;
+  top: 1rem;
   padding: 16px 34px;
-  top: 2.2rem;
   background: none;
   border: none;
   transition: 0.3s;
@@ -429,8 +431,10 @@ ul li.checked::before {
 }
 
 .toggleButton:hover{
-  opacity: .5;
+  opacity: 0.5;
 }
+
+
 
 .dark-bg{
   background-color: #34393d;
@@ -480,7 +484,7 @@ ul li.checked::before {
   padding: 12px;
   margin: 4px 3px;
   width: 6.5%;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   transition: 0.3s;
   margin: 3px 4px;
   cursor: pointer;
@@ -499,7 +503,7 @@ ul li.checked::before {
   width: 50rem;
   resize: none;
   font-size: 20px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   margin: 3px 4px;
   padding: 15px 12px;
   transition: 0.3s;
@@ -514,7 +518,7 @@ ul li.checked::before {
   height: 2rem;
   resize: none;
   font-size: 15px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   align-self: center;
   margin: 3px 4px;
   padding: 15px 12px;
@@ -530,7 +534,7 @@ ul li.checked::before {
   height: 2rem;
   resize: none;
   font-size: 15px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   align-self: center;
   margin: 3px 4px;
   padding: 15px 12px;
@@ -615,7 +619,7 @@ ul li.checked::before {
   font-size: 40px;
   cursor: pointer;
   transition: 0.3s;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   font-size: 25px;
   word-wrap: break-word;
   margin: 10px;
@@ -706,7 +710,7 @@ ul li.checked::before {
   height: 3rem;
   resize: none;
   font-size: 20px;
-  font-family: 'Varela Round';
+  font-family: 'Poppins';
   margin: 3px 4px;
   padding: 15px 12px;
   transition: 0.3s;
