--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ header{
     position: relative;
     left: 0;
     top: 0;
-    width: 1005;
+    width: 100%;
     height: 80px;
 }
 
@@ -22,7 +22,6 @@ header h4{
 }
 
 /* Splash Screen */
-
 .intro{
     position: fixed;
     z-index: 12;
@@ -60,3 +59,9 @@ header h4{
     opacity: 0;
     transition: ease-in-out 0.5s;
 }
+
+.overdue {
+    background-color: #ffcccc; /* Light red */
+    color: #a70000; /* Darker red text */
+  }
+
